# llm-economicus

./: AGENTS.md  README.md  main.py  pyproject.toml
research/: literature.md
scripts/: generate_training_dataset.py  inspect_prompt_variants.py  lint_phrase_diversity.py  prompt_diversity_batch_report.py  validate_prompt_shells.py  validate_prompt_similarity_batch.py
src/: canonical_exporter.py  schema.py
src/data-generation/: base_generator.py  bayesian_signal_generator.py  belief_bias_generator.py  difficulty_config.py  risk_loss_time_generator.py
tests/: test_bayesian_signal_generator.py  test_belief_bias_generator.py  test_canonical_exporter.py  test_generate_training_dataset_script.py  test_main_cli.py  test_prompt_diversity_balancing.py  test_prompt_rendering_contracts.py  test_risk_loss_time_generator.py
